# CLion

SFML/: CMakeLists.txt  main.cpp
qtTest/: CMakeLists.txt
sfmlTest/: CMakeLists.txt  common.cpp  common.h  polynom.cpp
sfmlTest/samples/: sample1.pol  sample1.pol.out  sample2.pol  sample2.pol.out  sample3.pol  sample3.pol.out  sample4.pol
test/: CMakeLists.txt  main.cpp
